--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,8 +3,14 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  /* padding: 1rem; */
   font-weight: normal;
+  
+}
+
+@media (min-width: 768px) {
+  body {
+    background-image: url('../public/images/login-bg.jpg');
+  }
 }
 
 @media (min-width: 1024px) {
