--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,22 @@
 @import "./base.css";
 
+html {
+  height: 100%;
+}
+
+body {
+  color: var(--color-text);
+  background: var(--color-background);
+  transition: color 0.5s, background-color 0.5s;
+  line-height: 1.6;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 15px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -7,11 +24,6 @@
   
 }
 
-@media (min-width: 768px) {
-  body {
-    background-image: url('../public/images/login-bg.jpg');
-  }
-}
 
 @media (min-width: 1024px) {
   body {
@@ -23,5 +35,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
+  }
+}
+
+@media (min-width: 740px) {
+  body {
+    background-image: url('../images/login-bg.jpg');
   }
 }
