--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,13 +1,38 @@
 @import "./base.css";
 
+html {
+  height: 100%;
+}
+
+body {
+  color: var(--color-text);
+  background: var(--color-background);
+  transition: color 0.5s, background-color 0.5s;
+  line-height: 1.6;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 15px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 #app {
-  min-height: 100vh;
-
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
 }
 
-.myContainer {
-  max-width: 1280px;
+/* Footer content */
+
+.footer-links {
+  font-size: 13px;
+  position: relative;
+  bottom: 0;
 }
+
+
+
 
 
 @media (hover: hover) {
