--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,10 +11,8 @@
   position: relative;
   bottom: 0;
   padding-left: 0;
+  list-style: none;
 }
-
-
-
 
 
 @media (hover: hover) {
@@ -24,11 +22,7 @@
 }
 
 @media (min-width: 1024px) {
-  body {
+  body {}
 
-  }
-
-  #app {
-
-  }
+  #app {}
 }
