--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,6 +14,15 @@
   list-style: none;
 }
 
+#page-container {
+  position: relative;
+  min-height: 100vh;
+  bottom: 0;
+}
+
+#content-wrap {
+  /* Footer height */
+}
 
 @media (hover: hover) {
   a:hover {
